# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-treasure_env"
version = "0.1.0"
description = "Treasure Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    # Add browsergym for the submission-compliant inference script
    # "browsergym-env>=0.1.0", 
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m treasure_env.server.app
server = "treasure_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["treasure_env", "treasure_env.server"]
package-dir = { "treasure_env" = ".", "treasure_env.server" = "server" }